# CPP_Airconics

./: .gitignore  .gitmodules  CMakeLists.txt
include/: AirconicsBase.hpp  AirconicsFuselage.hpp
src/: AirconicsBase.cpp  AirconicsFuselage.cpp  CMakeLists.txt  main.cpp
